<resources>
    <string name="app_name">Faceln</string>
    <string name="chat">chat</string>
    <string name="address">address</string>
    <string name="community">community</string>
    <string name="my">my</string>
    <string name="newFriend">newFiend</string>
    <string name="inAll">inAll</string>
    <string name="all">All</string>
    <string name="friends">friends</string>
    <string name="friend">friend</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="automaticLogin">automaticLogin</string>
    <string name="rememberPassword">remPass</string>
    <string name="noAccount">No account? Hurry up registration</string>
    <string name="confirmationPassword">confirmPass</string>
    <string name="existAccount">Existing account? Direct login</string>
    <string name="back">back</string>
    <string name="send">send</string>
    <string name="choiceLanguage">choiceLanguage:</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="theme">Theme</string>
    <string name="myInformation">myInformation</string>
    <string name="setUp">setUp</string>
    <string name="quitToApp">quitToApp</string>
    <string name="boutique">boutique</string>
    <string name="myPost">myPost</string>
    <string name="holdToTalk">Hold to talk</string>
    <string name="searchFriend">searchFriend</string>
    <string name="phoneAddress">phoneAddress</string>
    <string name="takePhoto">takePhoto</string>
    <string name="album">album</string>
    <string name="saveImage">saveImage</string>
    <string name="cancel">cancel</string>
    <string name="friendVerification">friendVerification</string>
    <string name="needVerification">You need to send a verification request and wait for the person to pass</string>
    <string name="information">Information</string>
    <string name="phone">phone</string>
    <string name="slogan">slogan</string>
    <string name="hePost">hePost</string>
    <string name="sendMessage">sendMessage</string>
    <string name="deleteFriend">deleteFriend</string>
    <string name="addFriend">addFriend</string>
    <string name="accept">accept</string>
    <string name="refuse">refuse</string>
    <string name="title_activity_a" translatable="false">AActivity</string>
    <string name="hello_round" translatable="false">Hello Round World!</string>
    <string name="hello_square" translatable="false">Hello Square World!</string>
    <string name="permissionDenied">Please grand permission from your phone</string>
    <string name="remAccount">remAccount</string>
    <string name="preview">preview</string>
    <string name="messageReminder">messageReminder</string>
    <string name="languageSetting">languageSetting</string>
    <string name="chatSetting">chatSetting</string>
    <string name="receiveMessages">receive Messages</string>
    <string name="voice">voice</string>
    <string name="shock">shock</string>
    <string name="currentLanguage">currentLanguage:</string>
    <string name="selectLanguage">selectLanguage</string>
    <string name="simplifiedChinese">简体中文</string>
    <string name="U.S.English">U.S.English</string>
    <string name="followingSystem">Following system</string>
    <string name="saySth">Say Something...</string>
    <string name="delete">delete</string>
    <string name="modifyPassword">Modify Password</string>
    <string name="originalPassword">Original Password</string>
    <string name="sure">sure</string>
    <string name="submit">submit</string>
    <string name="clearChatLog">Clear Chat Log</string>
    <string name="AnalogMultiSystem">Faceln AnalogMulti System</string>
    <string name="BookReturnSystem">Book Return System</string>
    <string name="HospitalReportSystem">Hospital Inspection Report System</string>
    <string name="BankTellerMachineSystem">Bank Teller Machine System</string>
    <string name="InsertCard">Insert Card</string>
    <string name="QuitCard">Quit Card</string>
    <string name="PasswordLogin">Password Login</string>
    <string name="FaceLogin">Face Login</string>
    <string name="ChooseLoginWay">Please choose the way you want to log in</string>
    <string name="UpLoadFace">Please upload your face photos and not cover your face</string>
    <string name="UpLoad">Up Load</string>
    <string name="UsernameError">Incorrect username format!</string>
    <string name="PasswordError">Incorrect password format!</string>
    <string name="PasswordError2">Two cipher inconsistencies!</string>
    <string name="EmailError">Incorrect mailbox format!</string>
    <string name="FaceError">Please upload your face pictures!</string>
    <string name="UsernameHint">Up to 10 characters,support Chinese,alphabet,numbers</string>
    <string name="PasswordHint">Letters and numbers,6-16 bits</string>
    <string name="PasswordHint2">Two password input consistency</string>
    <string name="EmailHint">The mailbox will be to get the password back</string>
    <string name="RegisterSuccess">The registration is successful, after 3 seconds back to the login screen</string>
    <string name="InputPassword">Please enter your password</string>
</resources>
