<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ljh.faceln.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/TitleBarBgColor">

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/AnalogMultiSystem"
        android:textColor="@color/TitleBarBgColor"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btBook"
        android:text="@string/BookReturnSystem"
        android:textSize="20dp"
        android:textColor="@color/TitleTextBgColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btHospital"
        android:text="@string/HospitalReportSystem"
        android:textSize="20dp"
        android:textColor="@color/TitleTextBgColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btBank"
        android:text="@string/BankTellerMachineSystem"
        android:textSize="20dp"
        android:textColor="@color/TitleTextBgColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/register"
        android:textColor="@color/TitleBarBgColor"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
