<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/TitleBarBgColor"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/ivBack"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/ivInsertCard"
        android:scaleType="fitXY"
        android:src="@drawable/card"
        android:layout_width="80dp"
        android:layout_height="80dp"/>
        <Button
            android:id="@+id/btInsertCard"
            android:text="@string/InsertCard"
            android:textColor="@color/TitleTextBgColor"
            android:background="@drawable/bt_transparent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
        <Button
            android:id="@+id/btQuitCard"
            android:text="@string/QuitCard"
            android:textColor="@color/TitleTextBgColor"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bt_transparent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_LoginWay"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/ChooseLoginWay"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btPasswordLogin"
            android:text="@string/PasswordLogin"
            android:textColor="@color/TitleTextBgColor"
            android:background="@drawable/bt_transparent"
            android:layout_marginTop="30dp"
            android:layout_width="160dp"
            android:layout_height="35dp" />
        <Button
            android:id="@+id/btFaceLogin"
            android:text="@string/FaceLogin"
            android:textColor="@color/TitleTextBgColor"
            android:background="@drawable/bt_transparent"
            android:layout_marginTop="5dp"
            android:layout_width="160dp"
            android:layout_height="35dp" />
    </LinearLayout>

    <com.example.ljh.faceln.AutoFitTextureView
        android:id="@+id/textureView"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>