<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/TitleBarBgColor">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:text="注册"
            android:textSize="20dp"
            android:textColor="@color/TitleTextBgColor"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_marginLeft="18dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/password"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_marginLeft="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/confirmationPassword"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_marginLeft="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:text="@string/UpLoadFace"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btUpLoad"
        android:text="@string/UpLoad"
        android:textColor="@color/TitleTextBgColor"
        android:background="@color/toumingButton"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />

        <ImageView
            android:id="@+id/ivTip"
            android:src="@drawable/ic_error_red_24dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp" />

</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    <ImageView
        android:id="@+id/ivFace"
        android:visibility="gone"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        android:layout_width="150dp"
        android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/ivDelete"
            android:src="@drawable/ic_cancel_black_24dp"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp" />
</LinearLayout>

    <Button
        android:id="@+id/btSubmit"
        android:text="@string/submit"
        android:textColor="@color/TitleTextBgColor"
        android:background="@drawable/bt_transparent"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_width="140dp"
        android:layout_height="40dp" />

</LinearLayout>